--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,20 @@ spring:
     jackson:
         serialization.indent_output: true
     datasource:
-#        type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:h2:file:./target/h2db/db/logistica;DB_CLOSE_DELAY=-1
         username: logistica
         password:
     jpa:
         database-platform: org.hibernate.dialect.H2Dialect
         database: H2
-        show-sql: true
+        show-sql: false
+        hibernate:
+            ddl-auto: update
         properties:
             hibernate.id.new_generator_mappings: true
             hibernate.cache.use_second_level_cache: false
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
+            hibernate.hbm2ddl.auto: update
 server:
     port: 8080
